Fixed UI for smaller screens

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Docker Container Manager</title>
+  <title>web-docker-dumb</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Docker Container Manager</h1>
-      <p class="description">Manage your Docker containers easily from this interface.</p>
+      <h1>web-docker-dumb</h1>
+      <p class="description">A dumb UI for smart people.</p>
       <button id="refresh" class="refresh-btn">Refresh</button>
     </header>
     <div class="main-wrapper">
@@ -40,9 +40,6 @@
         </div>
       </section>
     </div>
-    <footer>
-      <p>Docker Container Manager © 2025</p>
-    </footer>
   </div>
   <script src="script.js"></script>
 </body>
