--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,6 +41,7 @@
       </section>
     </div>
   </div>
+  <script src="config.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
