--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,10 +10,11 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;700&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="styles.css?v=2" />
+  <link rel="stylesheet" href="styles.css?v=3" />
 </head>
 
 <body>
+  <div class="sidebar-overlay" id="sidebarOverlay"></div>
   <div class="dashboard-grid">
     <aside class="sidebar-nav" id="sidebar">
       <div class="sidebar-header">
@@ -27,6 +28,13 @@
 
     <main class="content-wrapper">
       <header class="top-bar">
+        <button id="hamburgerBtn" class="hamburger-btn" title="Toggle Menu">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <line x1="3" y1="6" x2="21" y2="6"></line>
+            <line x1="3" y1="12" x2="21" y2="12"></line>
+            <line x1="3" y1="18" x2="21" y2="18"></line>
+          </svg>
+        </button>
         <h1 class="page-title">Dashboard</h1>
         <div class="header-controls">
           <button id="refresh" class="btn btn-icon" title="Refresh">
